--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -9,6 +9,24 @@
     </a>
   {% endfor %}
 
+
+  <div class="sidebar-nav btn-group" >
+    <li class="sidebar-brand" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="glyphicon glyphicon-th" data-toggle="tooltip" data-original-title="Portails thématiques" data-placement="right"></span>
+    </li>
+  
+    <ul class="dropdown-menu">
+      {% for portal_name, page_values in configuration.PORTAL_PAGES.items()|sort(attribute='1.order') %}
+      <a href="{{url_for('main.fichePortailTaxonomique', portal_name=portal_name)}}">
+      <li class="sidebar-brand">{{page_values.title}}</li>
+      </a>
+      {% endfor %}
+    </ul>
+  </div>
+
+
+
+
   <a href="{{url_for('main.photos')}}" data-toggle="tooltip" data-original-title="Galerie photos" data-placement="right">
     <li class="sidebar-brand"><span class="glyphicon glyphicon-camera"></span></li>
   </a>
